# logInRegistrationIOt-NodeMailer

./: minimal2 - Secured.py  sensor-secured-2.py  sensor-secured-3.py  sensor-secured.py
Mqtt-bridge/: bridge.js  broker.crt  package-lock.json  package.json
client-SIde/client/: README.md  firebase.config.js  imageServer.py  index.html  package-lock.json  package.json
client-SIde/client/src/: main.jsx  socket.js
client-SIde/client/src/components/Auth/: AuthProvider.jsx
client-SIde/client/src/components/Home/: Home.jsx  Login.jsx  Registration.jsx
client-SIde/client/src/components/Layout/: Layout.jsx
client-SIde/client/src/components/Layout/DashBoard/: Admin.jsx  Dashboard.jsx  EmailRoom.jsx  Room.jsx  Room2.jsx  Room3.jsx  Room4.jsx
client-SIde/client/src/components/router/: PrivateRoute.jsx  router.jsx
client-SIde/client/src/components/shared/: Navbar.jsx
multithread - Secured - xtra-task/: CMakeLists.txt
multithread - Secured - xtra-task/main/: CMakeLists.txt  app_main.c  config.h  led_config.c  led_config.h  mqtt_client_config.c  mqtt_client_config.h  tutorial.c  tutorial.h
server/: .env  New Text Document.txt  Server.js  package-lock.json  package.json  testEmail.js
server/config/: db.js
server/controllers/: authController.js  emailController.js
server/middlewares/: authMiddleware.js
server/models/: userModel.js
server/routes/: authRoutes.js  emailRoutes.js
